--- a/apps/trip-expense-calculator/src/styles.scss
+++ b/apps/trip-expense-calculator/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import './app/theming/theme';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+}
