fixed routing and added some theme components

--- a/apps/trip-expense-calculator/src/app/components/not-found/not-found.component.html
+++ b/apps/trip-expense-calculator/src/app/components/not-found/not-found.component.html
@@ -1,3 +1,14 @@
-<div>
-  <h1>Uh oh! You look lost...</h1>
+<div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center">
+  <h1>
+    Uh oh!<br />
+    You look lost...
+  </h1>
+  <button
+    class="tec-button tec-button-primary"
+    type="button"
+    style="display: block"
+    routerLink="/home"
+  >
+    Navigate home
+  </button>
 </div>
