--- a/libs/frontend/feature-wrapper/src/lib/wrapper/wrapper.component.html
+++ b/libs/frontend/feature-wrapper/src/lib/wrapper/wrapper.component.html
@@ -1,11 +1,5 @@
-<div
-  class="wrapper"
-  fxFlexFill
-  fxLayout="column"
-  fxLayoutAlign="center center"
-  style="border: 1px solid red"
->
-  <div class="container" style="border: 1px solid red">
+<div class="wrapper" fxFlexFill fxLayout="row" fxLayoutAlign="center center">
+  <div class="container" fxFlex="50%" fxFlex.lt-md="100%">
     <ng-content></ng-content>
   </div>
 </div>
