created backend libraries and hooked up get trips and create trips

--- a/apps/trip-expense-calculator/src/app/theming/_theme.scss
+++ b/apps/trip-expense-calculator/src/app/theming/_theme.scss
@@ -1,5 +1,8 @@
 @use 'colors' as colors;
+@import './components/reset';
 @import './components/buttons';
+@import './components/inputs';
+@import './components/hr';
 
 body.dark {
   --primary: #{colors.$blue};
