--- a/libs/frontend/feature-wrapper/src/lib/wrapper/wrapper.component.html
+++ b/libs/frontend/feature-wrapper/src/lib/wrapper/wrapper.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper" fxFlexFill fxLayout="row" fxLayoutAlign="center center">
-  <div class="container" fxFlex="50%" fxFlex.lt-md="100%">
+  <div class="container" fxFlex="60%" fxFlex.lt-lg="100%">
     <ng-content></ng-content>
   </div>
 </div>
