finished implementing routing for new trip page

--- a/apps/trip-expense-calculator/src/app/components/not-found/not-found.component.html
+++ b/apps/trip-expense-calculator/src/app/components/not-found/not-found.component.html
@@ -7,7 +7,7 @@
     class="tec-button tec-button-primary"
     type="button"
     style="display: block"
-    routerLink="/home"
+    routerLink="/trips"
   >
     Navigate home
   </button>
