removed inline style

--- a/apps/trip-expense-calculator/src/app/components/not-found/not-found.component.html
+++ b/apps/trip-expense-calculator/src/app/components/not-found/not-found.component.html
@@ -3,12 +3,7 @@
     Uh oh!<br />
     You look lost...
   </h1>
-  <button
-    class="tec-button tec-button-primary"
-    type="button"
-    style="display: block"
-    routerLink="/trips"
-  >
+  <button class="tec-button tec-button-primary" type="button" routerLink="/trips">
     Navigate home
   </button>
 </div>
