styled modal and created second modal

--- a/apps/trip-expense-calculator/src/app/theming/_colors.scss
+++ b/apps/trip-expense-calculator/src/app/theming/_colors.scss
@@ -4,6 +4,6 @@ $red: #d32f2f;
 $yellow: #f57c00;
 $green: #388e3c;
 $dark: #121212;
-$grey: rgba(255, 255, 255, 0.12);
+$grey: #232323;
 $white: #fff;
 $lessWhite: rgba(255, 255, 255, 0.7);
