--- a/apps/trip-expense-calculator/src/app/theming/components/_buttons.scss
+++ b/apps/trip-expense-calculator/src/app/theming/components/_buttons.scss
@@ -30,3 +30,8 @@
   color: var(--font-primary);
   background-color: var(--secondary);
 }
+
+.tec-button-warn {
+  color: var(--font-primary);
+  background-color: var(--warn);
+}
