--- a/libs/frontend/util-shared/src/lib/components/modal/modal.component.scss
+++ b/libs/frontend/util-shared/src/lib/components/modal/modal.component.scss
@@ -10,7 +10,8 @@
   .tec-modal-body {
     padding: 20px;
     background: var(--foreground);
-    margin: 40px;
+    margin: 0 auto;
+    max-width: 600px;
   }
 }
 
