--- a/libs/frontend/feature-wrapper/src/lib/wrapper/wrapper.component.html
+++ b/libs/frontend/feature-wrapper/src/lib/wrapper/wrapper.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" fxFlexFill fxLayout="row" fxLayoutAlign="center center">
+<div class="wrapper" fxLayout="row" fxLayoutAlign="center center">
   <div class="container" fxFlex="60%" fxFlex.lt-lg="100%">
     <ng-content></ng-content>
   </div>
