--- a/libs/frontend/feature-trip/src/lib/pages/trip/trip.component.scss
+++ b/libs/frontend/feature-trip/src/lib/pages/trip/trip.component.scss
@@ -1,8 +1,15 @@
 :host {
   .trip-container {
     margin: 20px;
+    margin-top: 100px;
+    .vertical-center {
+      margin-bottom: 0;
+    }
     .member-expense-container {
-      margin-top: 100px;
+      .member-container,
+      .expense-container {
+        width: 100%;
+      }
     }
     .subtext {
       font-size: 1rem;
