--- a/libs/frontend/feature-trip/src/lib/pages/trips/trips.component.scss
+++ b/libs/frontend/feature-trip/src/lib/pages/trips/trips.component.scss
@@ -1,6 +1,9 @@
 :host {
-  .trip-selection {
-    max-width: 600px;
-    width: 100%;
+  .trips-container {
+    margin-top: 75px;
+    .trip-selection {
+      max-width: 600px;
+      width: 100%;
+    }
   }
 }
