finalized calculation and cleaned up UI

--- a/apps/trip-expense-calculator/src/app/theming/_theme.scss
+++ b/apps/trip-expense-calculator/src/app/theming/_theme.scss
@@ -18,3 +18,7 @@ body.dark {
   color: var(--font-primary);
   background-color: var(--background);
 }
+
+.vertical-center {
+  margin-bottom: 0;
+}
