fixed minor issues and cleaned up styling

--- a/libs/frontend/feature-trip/src/lib/pages/trip/trip.component.scss
+++ b/libs/frontend/feature-trip/src/lib/pages/trip/trip.component.scss
@@ -1,7 +1,12 @@
 :host {
+  #back-button {
+    margin-top: 20px;
+    float: left;
+  }
   .trip-container {
     margin: 20px;
     margin-top: 100px;
+
     .member-expense-container {
       .member-container,
       .expense-container,
