--- a/libs/frontend/feature-trip/src/lib/pages/trip/components/settle-up/settle-up.component.html
+++ b/libs/frontend/feature-trip/src/lib/pages/trip/components/settle-up/settle-up.component.html
@@ -7,5 +7,6 @@
     <h3 *ngFor="let debt of debts">
       {{ debt.member.name }} owes {{ debt.payTo.name }} {{ debt.amount | currency }}
     </h3>
+    <h3 *ngIf="debts?.length === 0">No debts owed! :)</h3>
   </div>
 </div>
