--- a/libs/frontend/feature-trip/src/lib/pages/trip/trip.component.html
+++ b/libs/frontend/feature-trip/src/lib/pages/trip/trip.component.html
@@ -1,3 +1,6 @@
+<button id="back-button" class="tec-button tec-button-secondary" type="button" routerLink="/trips">
+  Back
+</button>
 <div
   *ngIf="trip$ | async"
   class="trip-container"
